feat: update .env.example with PostgreSQL configuration and usage instructions

--- a/src/.env.example
+++ b/src/.env.example
@@ -1,7 +1,95 @@
-# Create a Postgres database on Vercel: https://vercel.com/postgres
-POSTGRES_URL=
-POSTGRES_PRISMA_URL=
-POSTGRES_URL_NON_POOLING=
+# =============================================================================
+# CONFIGURAÇÕES DO BANCO DE DADOS POSTGRESQL
+# =============================================================================
 
-# Generate one here: https://generate-secret.vercel.app/32 (only required for localhost)
-AUTH_SECRET=
+# Host do servidor PostgreSQL
+DB_HOST=localhost
+
+# Porta do PostgreSQL (padrão: 5432)
+DB_PORT=5432
+
+# Nome do banco de dados
+DB_NAME=sisobra_pref
+
+# Usuário do banco de dados
+DB_USER=postgres
+
+# Senha do usuário do banco de dados
+DB_PASSWORD=your_password_here
+
+# Habilitar SSL para conexão (true/false)
+# Para desenvolvimento local geralmente é false
+# Para produção com serviços em nuvem geralmente é true
+DB_SSL=false
+
+# =============================================================================
+# CONFIGURAÇÕES DA APLICAÇÃO
+# =============================================================================
+
+# Nome da aplicação (usado em metadados e interface)
+NEXT_PUBLIC_APP_NAME=SISOBRA - Visualização de Dados
+
+# Ambiente da aplicação (development, production, test)
+NODE_ENV=development
+
+# URL base da aplicação (para produção)
+# NEXT_PUBLIC_BASE_URL=https://your-domain.com
+
+# =============================================================================
+# CONFIGURAÇÕES DE DESENVOLVIMENTO (OPCIONAL)
+# =============================================================================
+
+# Habilitar logs detalhados de queries do banco
+# DB_DEBUG=true
+
+# Timeout para conexões do banco (em millisegundos)
+# DB_CONNECTION_TIMEOUT=2000
+
+# Número máximo de conexões no pool
+# DB_MAX_CONNECTIONS=20
+
+# =============================================================================
+# CONFIGURAÇÕES DE SEGURANÇA (PARA FUTURAS IMPLEMENTAÇÕES)
+# =============================================================================
+
+# Chave secreta para JWT (se implementar autenticação futuramente)
+# JWT_SECRET=your_super_secret_key_here
+
+# Salt rounds para hash de senhas (se implementar autenticação)
+# BCRYPT_ROUNDS=10
+
+# =============================================================================
+# CONFIGURAÇÕES DE EMAIL (PARA FUTURAS IMPLEMENTAÇÕES)
+# =============================================================================
+
+# Configurações SMTP para envio de emails
+# SMTP_HOST=smtp.gmail.com
+# SMTP_PORT=587
+# SMTP_USER=your_email@gmail.com
+# SMTP_PASSWORD=your_app_password
+# SMTP_FROM=noreply@your-domain.com
+
+# =============================================================================
+# CONFIGURAÇÕES DE MONITORAMENTO (PARA FUTURAS IMPLEMENTAÇÕES)
+# =============================================================================
+
+# URL para webhook de monitoramento
+# MONITORING_WEBHOOK_URL=https://hooks.slack.com/your-webhook
+
+# Chave API para serviços de monitoramento
+# MONITORING_API_KEY=your_monitoring_api_key
+
+# =============================================================================
+# INSTRUÇÕES DE USO
+# =============================================================================
+
+# 1. Copie este arquivo para .env.local
+# 2. Substitua os valores pelos valores reais do seu ambiente
+# 3. Nunca commite o arquivo .env.local no Git
+# 4. Para produção, configure as variáveis no seu provedor de hospedagem
+
+# Exemplo de comando para copiar (Windows):
+# copy .env.example .env.local
+
+# Exemplo de comando para copiar (Linux/Mac):
+# cp .env.example .env.local
